2005-06-11 23:56  skvidal

	* mock.py: 
	label 0.3

2005-06-11 23:38  skvidal

	* mock.spec, src/mock-helper.c: 
	security fix - pointed out by Toshio Kuratomi

2005-06-05 10:51  skvidal

	* mock.spec: 
	changes to spec file for fedora extras

2005-06-05 04:03  skvidal

	* mock.spec: few more fixes

2005-06-05 04:00  skvidal

	* mock.spec: 
	clean up spec file for fedora extras

2005-05-28 13:25  skvidal

	* Makefile: 
	change make clean in . of dist dir

2005-05-28 13:24  skvidal

	* ChangeLog: 
	update changelog

2005-05-28 13:24  skvidal

	* mock.spec: 
	add changelog to spec file

2005-05-28 13:18  skvidal

	* mock.py: 
	correct umount_by_file problem with trailing \n

2005-05-28 12:40  skvidal

	* mock.spec: 
	spec file fix

2005-05-28 12:34  skvidal

	* ChangeLog, README: 
	added changelog

2005-05-28 12:29  skvidal

	* README, mock.spec: 
	make the default.cfg symlink

2005-05-19 10:24  skvidal

	* README, mock.py, mock.spec, etc/fedora-3-i386-core.cfg,
	etc/fedora-3-x86_64-core.cfg, etc/fedora-development-i386-core.cfg,
	etc/fedora-development-ppc-core.cfg,
	etc/fedora-development-x86_64-core.cfg, src/mock-helper.c: 
	- allow users other than uid=500,gid=500 - fix warnings in
	mock-helper - fix umount of proc and devpts

2005-05-16 11:07  skvidal

	* mock.py: 
	pychecker is my friend

2005-05-16 11:04  skvidal

	* README, mock.py: 
	- default now the default config file - checks for membership in
	mock group before running - run yum update if the chroot is set to
	not be cleaned out

2005-05-16 02:27  skvidal

	* README, mock.py: 
	- update copyright info - update README with some more content and
	TODOs

2005-05-15 22:44  skvidal

	* Makefile, README, mock.py, mock.spec, src/Makefile, src/config.h,
	etc/Makefile, etc/fedora-3-i386-core.cfg,
	etc/fedora-3-x86_64-core.cfg, etc/fedora-development-i386-core.cfg,
	etc/fedora-development-ppc-core.cfg,
	etc/fedora-development-x86_64-core.cfg, src/mock-helper.c,
	src/selinux-mock.c: Import mock
